[gd_scene load_steps=42 format=2]

[ext_resource path="res://fonts/RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/menu/multi.gd" type="Script" id=2]
[ext_resource path="res://objs/text/text.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menu/main.gd" type="Script" id=4]
[ext_resource path="res://scenes/menu/play.gd" type="Script" id=5]
[ext_resource path="res://scenes/menu/single.gd" type="Script" id=6]
[ext_resource path="res://scenes/menu/lobby.gd" type="Script" id=8]
[ext_resource path="res://scenes/menu/popup.gd" type="Script" id=9]
[ext_resource path="res://scenes/menu/lobbies.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 69
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=23]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=24]
size = 33
font_data = SubResource( 23 )

[sub_resource type="DynamicFontData" id=25]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=26]
size = 33
font_data = SubResource( 25 )

[sub_resource type="DynamicFontData" id=27]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=28]
size = 33
font_data = SubResource( 27 )

[sub_resource type="DynamicFontData" id=29]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=30]
size = 33
font_data = SubResource( 29 )

[sub_resource type="DynamicFontData" id=31]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=32]
size = 33
font_data = SubResource( 31 )

[sub_resource type="DynamicFontData" id=33]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=34]
size = 33
font_data = SubResource( 33 )

[sub_resource type="DynamicFontData" id=35]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=36]
size = 33
font_data = SubResource( 35 )

[sub_resource type="DynamicFontData" id=37]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=38]
size = 33
font_data = SubResource( 37 )

[sub_resource type="DynamicFontData" id=39]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=40]
size = 33
font_data = SubResource( 39 )

[sub_resource type="DynamicFontData" id=41]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=42]
size = 33
font_data = SubResource( 41 )

[sub_resource type="DynamicFontData" id=43]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=44]
size = 33
font_data = SubResource( 43 )

[sub_resource type="DynamicFontData" id=45]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=46]
size = 23
font_data = SubResource( 45 )

[sub_resource type="DynamicFontData" id=47]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=48]
size = 33
font_data = SubResource( 47 )

[sub_resource type="DynamicFontData" id=49]
font_path = "res://fonts/RobotoMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=50]
size = 33
font_data = SubResource( 49 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=22]
font_data = ExtResource( 1 )

[node name="menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0
custom_constants/separation = 33

[node name="title" type="Label" parent="menu"]
margin_right = 784.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "multi"

[node name="menus" type="VBoxContainer" parent="menu"]
margin_top = 125.0
margin_right = 784.0
margin_bottom = 217.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="VBoxContainer" parent="menu/menus"]
margin_right = 784.0
margin_bottom = 92.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" parent="menu/menus/main" instance=ExtResource( 3 )]
margin_right = 784.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 24 )
text = "play"
font_size = 33

[node name="quit" parent="menu/menus/main" instance=ExtResource( 3 )]
margin_top = 48.0
margin_right = 784.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 26 )
text = "quit"
font_size = 33

[node name="play" type="VBoxContainer" parent="menu/menus"]
visible = false
margin_top = 96.0
margin_right = 784.0
margin_bottom = 188.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="single" parent="menu/menus/play" instance=ExtResource( 3 )]
margin_right = 784.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 28 )
text = "single"
font_size = 33

[node name="multi" parent="menu/menus/play" instance=ExtResource( 3 )]
margin_right = 784.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 30 )
text = "multi"
font_size = 33

[node name="back" parent="menu/menus/play" instance=ExtResource( 3 )]
margin_top = 96.0
margin_right = 784.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 32 )
text = "back"
font_size = 33

[node name="single" type="VBoxContainer" parent="menu/menus"]
visible = false
margin_top = 96.0
margin_right = 784.0
margin_bottom = 188.0
script = ExtResource( 6 )

[node name="start" parent="menu/menus/single" instance=ExtResource( 3 )]
margin_right = 784.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 34 )
text = "start"
font_size = 33

[node name="back" parent="menu/menus/single" instance=ExtResource( 3 )]
margin_top = 48.0
margin_right = 784.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 36 )
text = "back"
font_size = 33

[node name="multi" type="VBoxContainer" parent="menu/menus"]
visible = false
margin_top = 96.0
margin_right = 784.0
margin_bottom = 236.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create" parent="menu/menus/multi" instance=ExtResource( 3 )]
margin_right = 784.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 38 )
text = "create"
font_size = 33

[node name="join" parent="menu/menus/multi" instance=ExtResource( 3 )]
margin_top = 48.0
margin_right = 784.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 40 )
text = "join"
font_size = 33

[node name="back" parent="menu/menus/multi" instance=ExtResource( 3 )]
margin_top = 96.0
margin_right = 784.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 42 )
text = "back"
font_size = 33

[node name="lobbies" type="VBoxContainer" parent="menu/menus"]
visible = false
margin_top = 96.0
margin_right = 784.0
margin_bottom = 144.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobbies" type="VBoxContainer" parent="menu/menus/lobbies"]
margin_right = 784.0

[node name="back" parent="menu/menus/lobbies" instance=ExtResource( 3 )]
margin_top = 4.0
margin_right = 784.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 44 )
text = "back"
font_size = 33

[node name="lobby" type="VBoxContainer" parent="menu/menus"]
visible = false
margin_top = 96.0
margin_right = 784.0
margin_bottom = 218.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="HBoxContainer" parent="menu/menus/lobby"]
margin_right = 784.0
margin_bottom = 22.0

[node name="name" parent="menu/menus/lobby/info" instance=ExtResource( 3 )]
margin_bottom = 22.0
mouse_default_cursor_shape = 0
custom_fonts/font = SubResource( 46 )
text = ""
font_size = 23
hoverable = false

[node name="color picker" type="ColorPickerButton" parent="menu/menus/lobby/info"]
margin_left = 4.0
margin_right = 784.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="actions" type="VBoxContainer" parent="menu/menus/lobby"]
margin_top = 26.0
margin_right = 784.0
margin_bottom = 118.0

[node name="leave" parent="menu/menus/lobby/actions" instance=ExtResource( 3 )]
margin_right = 784.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 48 )
text = "leave"
font_size = 33

[node name="start" parent="menu/menus/lobby/actions" instance=ExtResource( 3 )]
margin_top = 48.0
margin_right = 784.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 50 )
text = "start"
font_size = 33

[node name="players list" type="VBoxContainer" parent="menu/menus/lobby"]
margin_top = 122.0
margin_right = 784.0
margin_bottom = 122.0

[node name="popup" type="PopupPanel" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 312.0
margin_bottom = 178.0
size_flags_horizontal = 0
size_flags_vertical = 0
popup_exclusive = true
script = ExtResource( 9 )

[node name="vbox" type="VBoxContainer" parent="popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -45.0
margin_right = 92.0
margin_bottom = 45.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name container" type="HBoxContainer" parent="popup/vbox"]
margin_top = 18.0
margin_right = 234.0
margin_bottom = 50.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="popup/vbox/name container"]
margin_left = 30.0
margin_top = 5.0
margin_right = 70.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 20 )
text = "name"

[node name="name" type="LineEdit" parent="popup/vbox/name container"]
margin_left = 74.0
margin_right = 204.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 21 )
text = "matt"
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.5

[node name="color container" type="HBoxContainer" parent="popup/vbox"]
margin_top = 54.0
margin_right = 234.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="popup/vbox/color container"]
margin_right = 50.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 20 )
text = "color"

[node name="color picker" type="ColorPickerButton" parent="popup/vbox/color container"]
margin_left = 54.0
margin_right = 234.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="buttons" type="HBoxContainer" parent="popup/vbox"]
margin_top = 80.0
margin_right = 234.0
margin_bottom = 108.0
alignment = 1

[node name="create" type="Button" parent="popup/vbox/buttons"]
margin_left = 25.0
margin_right = 97.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 22 )
text = "create"

[node name="join" type="Button" parent="popup/vbox/buttons"]
margin_left = 101.0
margin_right = 153.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 22 )
text = "join"

[node name="back" type="Button" parent="popup/vbox/buttons"]
margin_left = 157.0
margin_right = 209.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 22 )
text = "back"
[connection signal="gui_input" from="menu/menus/main/play" to="menu/menus/main" method="_on_play_gui_input"]
[connection signal="gui_input" from="menu/menus/main/quit" to="menu/menus/main" method="_on_quit_gui_input"]
[connection signal="gui_input" from="menu/menus/play/single" to="menu/menus/play" method="_on_single_gui_input"]
[connection signal="gui_input" from="menu/menus/play/multi" to="menu/menus/play" method="_on_multi_gui_input"]
[connection signal="gui_input" from="menu/menus/play/back" to="menu/menus/play" method="_on_back_gui_input"]
[connection signal="gui_input" from="menu/menus/single/start" to="menu/menus/single" method="_on_start_gui_input"]
[connection signal="gui_input" from="menu/menus/single/back" to="menu/menus/single" method="_on_back_gui_input"]
[connection signal="gui_input" from="menu/menus/multi/create" to="menu/menus/multi" method="_on_create_gui_input"]
[connection signal="gui_input" from="menu/menus/multi/join" to="menu/menus/multi" method="_on_join_gui_input"]
[connection signal="gui_input" from="menu/menus/multi/back" to="menu/menus/multi" method="_on_back_gui_input"]
[connection signal="gui_input" from="menu/menus/lobbies/back" to="menu/menus/lobbies" method="_on_back_gui_input"]
[connection signal="color_changed" from="menu/menus/lobby/info/color picker" to="menu/menus/lobby" method="_on_color_picker_color_changed"]
[connection signal="gui_input" from="menu/menus/lobby/actions/leave" to="menu/menus/lobby" method="_on_leave_gui_input"]
[connection signal="gui_input" from="menu/menus/lobby/actions/start" to="menu/menus/lobby" method="_on_start_gui_input"]
[connection signal="pressed" from="popup/vbox/buttons/create" to="popup" method="_on_popup_create_pressed"]
[connection signal="pressed" from="popup/vbox/buttons/join" to="popup" method="_on_popup_join_pressed"]
[connection signal="pressed" from="popup/vbox/buttons/back" to="popup" method="_on_popup_back_pressed"]
